# old_kollos

./: .gitignore  HOWTO  LICENSE  Makefile  README.md  aaaa.lua  about.md  copyin.sh  libmarpa.git.version  luif_proto.pl  test.sh
components/: .gitignore  CMakeLists.txt
components/json/: CMakeLists.txt
components/kollos_core/: CMakeLists.txt  kollos_core.c.lua
components/libmarpa/: CMakeLists.txt  LOG_DATA  error_codes.table  events.table  steps.table
components/libmarpa/include/: marpa.h
components/lua/: CMakeLists.txt  README
components/lua/src/: CMakeLists.txt  llex.c  proxy.c
components/main/: CMakeLists.txt  compat-5.2.h  kollos.c.lua  kollos.lua  kollos_core.c.lua  location.lua  test.sh  wrapper_gen.lua
components/main/kollos/: CMakeLists.txt  a8lex.lua.md  abbreviations  bocage.lua.md  compat-5.2.c  config.lua  development.lua  dumper.lua  grammar.lua  grammar.lua.md  lo_g.lua  location.lua  luatangle  main.lua  matrix.lua  order.lua.md  recce.lua.md  top.lua  tree.lua.md  util.lua  value.lua.md  wrap.lua
components/marpalua/: CMakeLists.txt  marpalua.c  marpalua.c.lua
components/modules/: FindFileno.cmake  FindInline.cmake  FindLibmarpa.cmake  FindLocaltime_r.cmake  FindLocaltime_s.cmake  FindLuaInterp5_1.cmake  FindSWIG.cmake  FindStrdup.cmake  FindVa_copy.cmake  FindWrite.cmake  Find_strerror_s.cmake  Find_vsnprintf_s.cmake
components/pluif/: CMakeLists.txt  LUIF.pm  Lua.pm  README.md
components/swig/include/: dateBuilder.h  genericStack.h  manageBuf.h
components/swig/src/: genericStack.c  manageBuf.c
components/tap/: CMakeLists.txt
components/test/: CMakeLists.txt  TESTS  json.kir  json.lua  lua_bf.pl  simple_test.lua  simple_test2.lua  simple_test_sequence.lua  test.lua
components/test/dev/: CMakeLists.txt  README  json.lua  simple3.lua  simple_test.lua  simple_test2.lua
components/test/luif/: CMakeLists.txt  README  aaa.lua  aaaa.lua  lua_to_ast.pl  luif_proto.pl  round1.pl  round2.lua  round2.pl  seq.lua  seq2.lua  seq3.lua  seq4.lua
components/wrapper/: CMakeLists.txt
components/wrapper/include/: genericLogger.h  marpa_wrapper.h  marpa_wrapper_Export.h  marpa_wrapper_config.h.in  messageBuilder.h
components/wrapper/src/: dateBuilder.c  genericLogger.c  marpa_wrapper.c  messageBuilder.c
components/wrapper/test/: marpa_wrapper_test.c
design/: base_lexer.md  evaluate.md  lexer.md  name.md  notes.md  principles.md  rewrite.md  sequence.md
etc/: cp_libmarpa.sh  cp_libmarpa_cm_dist.pl  libmarpa_get.pl
htm/: grammar.lua.htm
libmarpa/cmake/: CMakeLists.txt  to_dist.pl
libmarpa/work/dev/: api.texi
libmarpa/work/public/: .gitignore  Makefile  texi2event.pl
misc/: leo.md
notes/: README.md
notes/design/: README.md  intermediate.md  internals.md  lexer.md  new_luif.md  notes.md  precedenced.md  principles.md  rewrite.md  sequence.md  simplify.md
notes/misc/: README.md  constant.space.md  constant_space.md  leo2.md  linear.md  linear_space.md  loup2.md  strand.md
working/: json.luif
